--- a/css/style_home.css
+++ b/css/style_home.css
@@ -101,7 +101,7 @@
 }
 
 .ch-info p {
-    color: #fff;
+    color: #daa520;
     padding: 10px 5px;
     font-style: italic;
     margin: 0 30px;
@@ -202,4 +202,58 @@
 
 h5 {
     color: white;
+}
+
+.btn-personal {
+    background-color: #D6A2E8;
+    color: black;
+    cursor: pointer;
+    font-family: Georgia, serif;
+}
+
+.btn-personal:not(:disabled):not(.disabled).active:focus {
+    color: #D6A2E8;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-personal:hover {
+    color: white;
+    background-color: #82589F;
+    border-color: #351b47;
+}
+
+.btn-personal:focus,
+.btn-personal.focus {
+    box-shadow: 0 0 0 0.2rem rgba( 130, 88, 159, 0.5)
+}
+
+.btn-personal.disabled,
+.btn-personal:disabled {
+    color: white;
+    background-color: #82589F;
+    border-color: #82589F;
+}
+
+.btn-personal:not(:disabled):not(.disabled):active,
+.btn-personal:not(:disabled):not(.disabled).active,
+.show>.btn-personal.dropdown-toggle {
+    color: white;
+    background-color: #82589F;
+    border-color: #82589F;
+}
+
+.btn-personal:not(:disabled):not(.disabled):active:focus,
+.btn-personal:not(:disabled):not(.disabled).active:focus,
+.show>.btn-personal.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgba( 130, 88, 159, 0.5);
+}
+
+.bp {
+    border-radius: 100%;
+    background-color: black;
+}
+
+.ci {
+    color: black;
 }
