--- a/css/style_c.css
+++ b/css/style_c.css
@@ -42,3 +42,14 @@
 .show>.btn-personal.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.2rem rgba( 130, 88, 159, 0.5);
 }
+
+.ais {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    color: #82589F;
+}
+
+.acc {
+    color: #82589F;
+}
