--- a/css/style_n.css
+++ b/css/style_n.css
@@ -1,21 +1,35 @@
-.img {
-    width: 90%;
-    height: 90%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-
-.carousel,
-.carousel .carousel-inner,
-.carousel .carousel-inner .active,
-.carousel .carousel-inner .carousel-item,
-.view,
-body,
-html {
-    height: 100%
-}
-
-.bc {
-    background-color: #1C2331;
-}
+                            .img {
+                            width: 90%;
+                            height: 90%;
+                            display: block;
+                            margin-left: auto;
+                            margin-right: auto
+                        }
+                        
+                        .carousel,
+                        .carousel .carousel-inner,
+                        .carousel .carousel-inner .active,
+                        .carousel .carousel-inner .carousel-item,
+                        .view,
+                        body,
+                        html {
+                            height: 100%
+                        }
+                        
+                        .bc {
+                            background-color: #1C2331;
+                        }
+                        /* Extra small devices (portrait phones, less than 576px)*/
+                        
+                        @media (max-width: 575.98px) {
+                            .apn {
+                                font-size: small;
+                            }
+                            /* Small devices (landscape phones, less than 768px) */
+                            @media (max-width: 767.98px) {}
+                            /* Medium devices (tablets, less than 992px) */
+                            @media (max-width: 991.98px) {}
+                            /* Large devices (desktops, less than 1200px) */
+                            @media (max-width: 1199.98px) {}
+                            /* Extra large devices (large desktops) */
+                            /* No media query since the extra-large breakpoint has no upper bound on its width */
