--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,73 @@
-                    ul {
-                    list-style-type: none;
-                    margin: 0;
-                    padding: 0;
-                    overflow: hidden;
-                }
-                
-                li {
-                    float: left;
-                }
-                
-                li a {
-                    display: block;
-                    color: white;
-                    text-align: center;
-                    padding: 14px 16px;
-                    text-decoration: none;
-                }
-                
-                li a:hover:not(.active) {}
-                
-                .active {
-                    background-color: #04AA6D;
-                }
-                
-                .tp {
-                    position: relative;
-                    margin-right: 80%;
-                }
-                
-                .tp2 {
-                    position: absolute;
-                    margin-left: 30%;
-                }
-                /* Extra small devices (portrait phones, less than 576px)*/
-                
-                @media (max-width: 575.98px) {
-                    .tp {
-                        position: relative;
-                        margin-right: 0%;
-                    }
-                    /* Small devices (landscape phones, less than 768px) */
-                    @media (max-width: 767.98px) {}
-                    /* Medium devices (tablets, less than 992px) */
-                    @media (max-width: 991.98px) {}
-                    /* Large devices (desktops, less than 1200px) */
-                    @media (max-width: 1199.98px) {}
-                    /* Extra large devices (large desktops) */
-                    /* No media query since the extra-large breakpoint has no upper bound on its width */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {}
+
+.active {
+    background-color: #04AA6D;
+}
+
+.tp {
+    position: relative;
+    margin-right: 80%;
+}
+
+.tp2 {
+    position: absolute;
+    margin-left: 30%;
+}
+
+
+/* Extra small devices (portrait phones, less than 576px)*/
+
+@media (max-width: 575.98px) {
+    .tp {
+        position: relative;
+        margin-right: 0%;
+    }
+}
+
+
+/* Small devices (landscape phones, less than 768px) */
+
+@media (max-width: 767.98px) {}
+
+
+/* Medium devices (tablets, less than 992px) */
+
+@media (max-width: 991.98px) {}
+
+
+/* Large devices (desktops, less than 1200px) */
+
+@media (max-width: 1199.98px) {}
+
+
+/* Extra large devices (large desktops) */
+
+
+/* No media query since the extra-large breakpoint has no upper bound on its width */
+
+.af {
+    background-color: #b1070e;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    font-family: georgia;
+}
